travel_warnings/k8s/travel-warnings-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-warnings-api
spec:
  selector:
    matchLabels:
      app: travel-warnings-api
  template:
    metadata:
      labels:
        app: travel-warnings-api
    spec:
      containers:
        - name: travel-warnings-api
          image: ghcr.io/leotschritter/cad-backend-travel-warnings:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /q/health/started
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 30
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            periodSeconds: 30
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            periodSeconds: 30
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: travel-warnings-api
spec:
  type: ClusterIP
  selector:
    app: travel-warnings-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
